<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".SignInActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-30dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/button_background_red"
        android:paddingStart="103dp"
        android:paddingTop="84dp"
        android:paddingEnd="103dp"
        android:paddingBottom="84dp"
        android:src="@drawable/man_of_nachalo"
        app:layout_constraintBottom_toTopOf="@+id/text_view_email_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_email_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/email"
        android:textColor="@color/black_opacity_40"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_email_s"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_email_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="37dp"
        android:fontFamily="@font/nunito_bold"
        android:hint="deliver@mail.ru"
        android:inputType="textEmailAddress"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/text_view_password_s"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_password_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/password"
        android:textColor="@color/black_opacity_40"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password_s"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_password_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="53dp"
        android:fontFamily="@font/nunito_bold"
        android:hint="* * * * * * * * "
        android:inputType="textPassword"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/fogot_password" />

    <TextView
        android:id="@+id/fogot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/red"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background_red"
        android:onClick="onClickLogin"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>